--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
 certifi==2022.6.15
+dj-database-url==1.0.0
 Django==4.1
 django-filter==22.1
 gunicorn==20.1.0
 numpy==1.23.1
+python-decouple==3.6
 sqlparse==0.4.2
